trustfall_core/test_data/tests/valid_queries/simple_query.graphql.ron
TestGraphQLQuery (
    schema_name: "numbers",
    query: r#"
{
    Number(max: 3) {
        name @output(name: "number_name")
    }
}"#,
    arguments: {},
)
