trustfall_core/test_data/tests/parse_errors/fold_and_output.graphql.ron
TestGraphQLQuery (
    schema_name: "filesystem",
    query: r#"
{
    OriginDirectory {
        out_Directory_ContainsFile @fold @output {
            name @output
        }
    }
}"#,
    arguments: {},
)
